Test secret scanner action with feature branch

--- a/.github/workflows/shared-secret-scanning.yml
+++ b/.github/workflows/shared-secret-scanning.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: hmcts/secrets-scanner@main
+      - uses: hmcts/secrets-scanner@add-system-ids-rule
         with:
           github_token: ${{ github.token }}
           gitleaks_license: ${{ secrets.GITLEAKS_LICENSE }}
