Enhance to use new input variables and add reame

--- a/.github/workflows/shared-secret-scanning.yml
+++ b/.github/workflows/shared-secret-scanning.yml
@@ -6,6 +6,8 @@ on:
         required: true
       HMCTS_CP_GITLEAKS_REGEX_INTERNAL_URL:
         required: true
+      HMCTS_CP_GITLEAKS_REGEX_SYSTEM_IDS:
+        required: true
 
 jobs:
   scan:
@@ -19,5 +21,6 @@ jobs:
         with:
           github_token: ${{ github.token }}
           gitleaks_license: ${{ secrets.GITLEAKS_LICENSE }}
-          gitleaks_regex_internal_url: ${{ secrets.HMCTS_CP_GITLEAKS_REGEX_INTERNAL_URL }}
-          gitleaks_regex_system_ids: ${{ secrets.HMCTS_CP_GITLEAKS_REGEX_SYSTEM_IDS }}
+          run_hmcts_rules: true
+          hmcts_regex_internal_urls: ${{ secrets.HMCTS_CP_GITLEAKS_REGEX_INTERNAL_URL }}
+          hmcts_regex_system_ids: ${{ secrets.HMCTS_CP_GITLEAKS_REGEX_SYSTEM_IDS }}
