Pass run_hmcts_rules value as string

--- a/.github/workflows/shared-secret-scanning.yml
+++ b/.github/workflows/shared-secret-scanning.yml
@@ -21,6 +21,6 @@ jobs:
         with:
           github_token: ${{ github.token }}
           gitleaks_license: ${{ secrets.GITLEAKS_LICENSE }}
-          run_hmcts_rules: true
+          run_hmcts_rules: "true"
           hmcts_regex_internal_urls: ${{ secrets.HMCTS_CP_GITLEAKS_REGEX_INTERNAL_URL }}
           hmcts_regex_system_ids: ${{ secrets.HMCTS_CP_GITLEAKS_REGEX_SYSTEM_IDS }}
